Fix buttons hover on mobile

--- a/static/assets/css/buttons.css
+++ b/static/assets/css/buttons.css
@@ -69,7 +69,8 @@
     z-index: -1;
 }
 
-.btn--fill-left:hover {
+.btn--fill-left:hover,
+.btn--fill-left:active {
     color: #fff;
 }
 
